--- a/R_C14_DADA2/3_Phyloseq output and figures/NMDS_PERMANOVA_2.0.Rmd
+++ b/R_C14_DADA2/3_Phyloseq output and figures/NMDS_PERMANOVA_2.0.Rmd
@@ -45,10 +45,10 @@ psotu2veg <- function(physeq) {
 CTD, sorted pico and sorted nano
 filter out heterotrophs
 ```{r}
-source(here("phyloseq", "init_files", "read_18s_filt_sort.R"))
+source(here("3_Phyloseq output and figures", "init_files", "read_18s_filt_sort.R"))
 
 ps_filt_sort <- phyloseq_assign_trophic(ps_filt_sort) %>%
-    subset_taxa(trophic_mode_2 != "heterotrophic") #remove heterotrophs
+    subset_taxa(trophic_mode != "heterotrophic") #remove heterotrophs
 
 #select only sorted samples, light incubation
 sample <- data.frame(ps_filt_sort@sam_data) %>%
@@ -111,17 +111,17 @@ nmds_sub$stress
 
 #plot overall
 nmds_euks <- nmds_sample_sub %>%
-    mutate(cycle_name = dplyr::recode(cycle_name, "SA1" = "SA-Sc")) %>%
-      mutate(cycle_name = dplyr::recode(cycle_name, "SA2" = "SA1")) %>%
-      mutate(cycle_name = dplyr::recode(cycle_name, "SA3" = "SA2")) %>%
-      mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2")) %>%
+    mutate(cycle_name_2 = dplyr::recode(cycle_name_2, "SA1" = "SA-Sc")) %>%
+      mutate(cycle_name_2 = dplyr::recode(cycle_name_2, "SA2" = "SA1")) %>%
+      mutate(cycle_name_2 = dplyr::recode(cycle_name_2, "SA3" = "SA2")) %>%
+      mutate(cycle_name_2 = fct_relevel(cycle_name_2, "ST1", "ST2", "SA-Sc", "SA1", "SA2")) %>%
     mutate(water_mass = recode(cycle_name, "ST1" = "ST",
                                            "ST2" = "ST",
                                            "SA-Sc" = "SA",
                                            "SA1" = "SA",
                                            "SA2" = "SA")) %>%
     ggplot(aes(x=NMDS1, y= NMDS2, shape = sample_type)) +
-    geom_point(aes(colour = cycle_name)) +
+    geom_point(aes(colour = cycle_name_2)) +
     stat_ellipse(aes(colour = water_mass))+
     scale_colour_manual(values = colours_cycle) +
     theme_classic() +
@@ -307,7 +307,7 @@ print(res)
 
 # Sorted Syn - petB
 ```{r}
-source(here("phyloseq", "init_files", "read_petb_2.0.R"))
+source(here("3_Phyloseq output and figures", "init_files", "read_petb_2.0.R"))
 
 #select only sorted samples, light incubation
 sample <- data.frame(ps_sorted@sam_data) %>%
@@ -370,14 +370,14 @@ nmds_sub$stress
 
 #plot overall
 nmds_syn <- nmds_sample_sub %>%
-    mutate(cycle_name = dplyr::recode(cycle_name, "SA1" = "SA-Sc")) %>%
-      mutate(cycle_name = dplyr::recode(cycle_name, "SA2" = "SA1")) %>%
-      mutate(cycle_name = dplyr::recode(cycle_name, "SA3" = "SA2")) %>%
-      mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2"))%>%
-    ggplot(aes(x=NMDS1, y= NMDS2)) +
-    geom_point(aes(colour = cycle_name), shape=15) +
+  mutate(cycle_name = dplyr::recode(cycle_name, "SA1" = "SA-Sc")) %>%
+  mutate(cycle_name = dplyr::recode(cycle_name, "SA2" = "SA1")) %>%
+  mutate(cycle_name = dplyr::recode(cycle_name, "SA3" = "SA2")) %>%
+  mutate(cycle_name = fct_relevel(cycle_name, "ST1", "ST2", "SA-Sc", "SA1", "SA2"))%>%
+  ggplot(aes(x=NMDS1, y= NMDS2)) +
+  geom_point(aes(colour = cycle_name), shape=15) +
   stat_ellipse(aes(colour = water_mass))+
-    scale_colour_manual(values = colours_cycle) +
+  scale_colour_manual(values = colours_cycle) +
   theme_classic() +
   theme(legend.position = "top")
 
