--- a/R_C14_rates calculation/1_Map, CTD, nutrients, cell abund/Map_temp_2.0.Rmd
+++ b/R_C14_rates calculation/1_Map, CTD, nutrients, cell abund/Map_temp_2.0.Rmd
@@ -31,7 +31,8 @@ library(RColorBrewer)
 #Plot SST
 ```{r}
 dname <- "sst"
-nc_SST <- ncdf4::nc_open( 'data_used/AQUA_MODIS.20181101_20181130.L3m.MO.NSST.sst.4km.nc')
+nc_SST <- ncdf4::nc_open(here('0_data_used/AQUA_MODIS.20181101_20181130.L3m.MO.NSST.sst.4km.nc'))
+
 
 print(nc_SST)
 ```
@@ -126,7 +127,7 @@ library(broom)
 
 ## Coordinates of stations
 ```{r}
-sampling_location <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+sampling_location <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `Lat_DD`, `Long_DD`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -141,6 +142,7 @@ sampling_location <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_
 # map coordinates
 ```{r}
 library(ggOceanMaps)
+library(ggspatial)
 
 p <- basemap(limits = c(172, -179, -46, -41.5), rotate = TRUE,  lon.interval = 2, lat.interval = 1,grid.size = 0.5, bathymetry = TRUE, bathy.style = "poly_greys") + 
   geom_spatial_point(data = sampling_location, aes(x = long, y = lat))
